  * Rescale some default allocation parameters -- bignum allocation by
    relblocks by default, default growth parameters are 1 (min),
    0.1*MAXPAGE (max), 0.5 (increase), 0.3 (percent free), holepage is
    4*MAXPAGE/1024, INIT_HOLEPAGE, INIT_NRBPAGE and RB_GETA scale
    accordingly
  * Clean windows/sysdir.bat
  * Check for zero args in new gcd code

 -- Camm Maguire <camm@enhanced.com>  Mon, 12 Jan 2004 16:55:55 -0500

gcl (2.6.1-20) unstable; urgency=low

  * Fix gcl-doc doc-base files

 -- Camm Maguire <camm@enhanced.com>  Tue, 30 Dec 2003 22:30:39 +0000

gcl (2.6.1-19) unstable; urgency=low

  * Fix bug in compiler::c2labels in which *ccb-vs* was missing a ocal
    rebind
  * Remove duplicate tags from compiled C switch statements
  * Minor merges for DARWIN support
  * Path to configure to make --enable-emacsdir work
  * Check for readline/readline.h header before configuring for readline
  * Improve system bfd library location detection
  * Make sure external gmp lib is compatible via __GNU_MP_VERSION, else
    backoff to local gmp build;  prepend externally defined CFLAGS into
    output CFLAGS, FINAL_CFLAGS, and NIFLAGS
  * Remove --enable-gmp configure option; gmp is required for GCL
  * Use --enable-emacsdir in debian/rules, make sure --enable-emacsdir
    and --enable-infodir work when arg contains ${prefix}
  * Fix typo in chap-6.texi
  * Make sure to export SGC define from config.h to cmpinclude.h -- Now
    that we used optimized structures in the compiler, we need at least
    the definition of SGC_TOUCH there to prevent GBC errors.  FIXME --
    handle header dependencies more robustly.  Thanks to Robert Boyer
    for the report
  * Improve SGC define extraction for cmpinclude.h
  * Fix variable reference errors which were occurring for compiled
    local functions defined within closure-generating or other
    environment stack pushing functions when safety is set to 3 (thanks