@@ -15,8 +15,9 @@ gcl (2.6.1-21) unstable; urgency=low
     accordingly
   * Clean windows/sysdir.bat
   * Check for zero args in new gcd code
+  * Default hole is maxpages/10, holesize configure option added
 
- -- Camm Maguire <camm@enhanced.com>  Mon, 12 Jan 2004 16:55:55 -0500
+ -- Camm Maguire <camm@enhanced.com>  Fri, 16 Jan 2004 16:55:18 +0000
 
 gcl (2.6.1-20) unstable; urgency=low
 
